Update for WS03 and terramaster.flightgear.org