@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.flightgear</groupId>
     <artifactId>terramaster</artifactId>
-    <version>2.08-SNAPSHOT</version>
+    <version>3.00-SNAPSHOT</version>
     <repositories>
         <repository>
             <id>central</id>
@@ -33,14 +33,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.7.2</version>
+                <version>2.15</version>
                 <configuration>
                     <workingDirectory>${project.build.directory}/test-run</workingDirectory>
                     <systemPropertyVariables>
                         <java.net.useSystemProxies>true</java.net.useSystemProxies>
                     </systemPropertyVariables>
+                    <argLine>
+                        --add-opens java.base/sun.net.dns=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED                       
+                    </argLine>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -195,6 +199,11 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>2.0.16</version>
+        </dependency>
         <dependency>
             <groupId>com.jhlabs</groupId>
             <artifactId>javaproj</artifactId>
